--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="healthbot.html">healthbot</a>
+						</li>
 					</ul>
 					<!--/search-right-->
 					<div class="search-right">
