--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
 			<!-- /move top -->
 
 		</section>
-		<iframe src='https://webchat.botframework.com?embed/healthbot-wqbwlrp?s=TFGE_iug53E.cXBgWR_9PUkFpSESrqxszRZaXt8hHEePXjBDbmnK8rQ' style='min-width: 400px; width:100%; min-height: 500px;'></iframe>
+		<iframe src='https://webchat.botframework.com/embed/healthbot-wqbwlrp?s=TFGE_iug53E.cXBgWR_9PUkFpSESrqxszRZaXt8hHEePXjBDbmnK8rQ' style='min-width: 400px; width:100%; min-height: 500px;'></iframe>
 	</footer>
 	<!--//footer-66 -->
 </body>
